Added:Created a Employee Payroll Form

--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -3,30 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel ="stylesheet" href="../css/new_payroll_form.css">
+    <link rel ="stylesheet" href = "../css/new_payoll_form.css">
     <title>Employee Payroll Form</title>
-    <script defer src ="../js/payroll_form.js"></script>
+    <script defer src="../js/payroll_form.js"></script>
 </head>
 <body>
-    <header class ="head-content header">
-        <div class ="logo content">
-            <img src="" alt="">
+    <header class="header-content header">
+        <div class="logo-content">
+            <img src="../assets/logo.png" alt="">
             <div>
-                <span class ="emp-text">Employee</span>
-                <span class ="emp-text emp-payroll">PAYROLL</span>
+                <span class="emp-text">EMPLOYEE</span>
+                <span class="emp-text emp-payroll">PAYROLL</span>
             </div>
         </div>
-        <div class="form-content">
-            <form class="form" action="#" onsubmit="save();return false">
-                <div class="form-head">Employee Payroll form</div>
-                <div class="row-content">
-                    <label class="label text" for="name">Name</label>
-                    <input class="input" type="text" id="name" name="name" placeholder="Your name.." required><br>
-                    <br>
-                    <input type="submit" value="Submit">
-                </div>
-            </form>
-        </div>
-    </header>  
+    </header>
 </body>
 </html>
