--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap">
     <link rel ="stylesheet" href = "../css/new_payoll_form.css">
     <title>Employee Payroll Form</title>
     <script defer src="../js/payroll_form.js"></script>
@@ -10,7 +11,7 @@
 <body>
     <header class="header-content header">
         <div class="logo-content">
-            <img src="../assets/logo.png" alt="">
+            <img src="../assets/logo.png" alt="logo">
             <div>
                 <span class="emp-text">EMPLOYEE</span>
                 <span class="emp-text emp-payroll">PAYROLL</span>
@@ -19,12 +20,39 @@
     </header>
     <div class="form-content">
         <form class="form" action="#" onsubmit="save();return false">
-            <div class="form-head">Employee Payroll form</div>
+            <div class="form-head">
+                Employee Payroll Form
+            </div>
             <div class="row-content">
                 <label class="label text" for="name">Name</label>
                 <input class="input" type="text" id="name" name="name" placeholder="Your name.." required>
             </div>
+            <div class="row-content">
+                <label class="label text" for="name">Profile Image</label>
+                <div class= "profile-radio-content">
+                    <label>
+                        <input type="radio" id="profile1" name="profile"
+                        value="../assets/Ellipse-3"required >
+                        <img class="profile" id='image1' src="../assets/Ellipse -3.png">
+                    </label>
+                    <label>
+                        <input type="radio" id="profile2" name="profile"
+                        value="../assets/Ellipse-1"required >
+                        <img class="profile" id='image1' src="../assets/Ellipse -1.png">
+                    </label>
+                    <label>
+                        <input type="radio" id="profile3" name="profile"
+                        value="../assets/Ellipse-8"required >
+                        <img class="profile" id='image1' src="../assets/Ellipse -8.png">
+                    </label>
+                    <label>
+                        <input type="radio" id="profile4" name="profile"
+                        value="../assets/Ellipse-7"required >
+                        <img class="profile" id='image1' src="../assets/Ellipse -7.png">
+                    </label>
+                </div>
+                <input type="radio">
+            </div>
         </form>
-    </div>
 </body>
 </html>
