Added:Event Listener To Display Salary

--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -85,6 +85,7 @@
                 <label class="label text" for="startDate">StartDate</label>
             <div>
                 <select id="day" name="Day">
+                    <option value="0">Day</option>
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -117,6 +118,7 @@
                     <option value="30">30</option>
                 </select>
                 <select id="month" name="Month">
+                    <option value="0">Month</option>
                     <option value="Jan">January</option>
                     <option value="Feb">February</option>
                     <option value="Mar">March</option>
@@ -131,6 +133,7 @@
                     <option value="Dec">December</option>
                 </select>
                 <select id="year" name="Year">
+                    <option value="0">Year</option>
                     <option value="2020">2020</option>
                     <option value="2019">2019</option>
                     <option value="2018">2018</option>
