Added:New File With Getters And Setters And Validated Them

--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap">
     <link rel ="stylesheet" href = "../css/new_payoll_form.css">
     <title>Employee Payroll Form</title>
+    <script src="../js/EmployeePayroll.js"></script>
     <script defer src="../js/payroll_form.js"></script>
 </head>
 <body>
@@ -26,6 +27,7 @@
             <div class="row-content">
                 <label class="label text" for="name">Name</label>
                 <input class="input" type="text" id="name" name="name" placeholder="Your name.." required>
+                <error-output class="text-error" for='text'></error-output>
             </div>
             <div class="row-content">
                 <label class="label text" for="name">Profile Image</label>
