--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -143,6 +143,7 @@
                     <option value="2016">2016</option>
                 </select>
             </div>
+            <error-output class="date-error" for='text'></error-output>
             </div>
             <div class="row content">
                 <label class="label text" for="notes">Notes</label>
