--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -28,6 +28,39 @@
                 <img src="../assets/add-24px.svg" alt="">Add User</a>
         </div>
     </div>
+    <div class="table-main">
+        <table id="table-display" class="table">
+            <tr>
+                <th></th>
+                <th>Name</th>
+                <th>Gender</th>
+                <th>Department</th>
+                <th>Salary</th>
+                <th>Start Date</th>
+                <th>Actions</th>
+            </tr>
+            <tr>
+                <td>
+                    <img src="../assets/Ellipse -7.png" alt="" class="profile">
+                </td>
+                <td>Random 1</td>
+                <td>Male</td>
+                <td>
+                    <div class="dept-label">HR</div>
+                    <div class="dept-label">Finance</div>
+                </td>
+                <td>20202020</td>
+                <td>16 Sep 2020</td>
+                <td>
+                    <img id="1" onclick="remove(this)" src="../assets/delete-black-18dp.svg" alt="Delete">
+                    <img id="1" onclick="update(this)" src="../assets/create-black-18dp.svg" alt="Edit">
+                </td>
+            </tr>
+        </table>
+    </div>
+    </table>
+</div>
+</div>
 
 </body>
 </html>
