Added:Created New Js Files

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -21,46 +21,19 @@
     <div class="main-content">
         <div class="header-content">
             <div class="emp-detail-text">
-                 Employee Details
+                Employee Details
                 <div class="emp-count">10</div>
             </div>
             <a href="../pages/payroll_form.html" class="add-button">
                 <img src="../assets/add-24px.svg" alt="">Add User</a>
         </div>
-    </div>
-    <div class="table-main">
-        <table id="table-display" class="table">
-            <tr>
-                <th></th>
-                <th>Name</th>
-                <th>Gender</th>
-                <th>Department</th>
-                <th>Salary</th>
-                <th>Start Date</th>
-                <th>Actions</th>
-            </tr>
-            <tr>
-                <td>
-                    <img src="../assets/Ellipse -7.png" alt="" class="profile">
-                </td>
-                <td>Random 1</td>
-                <td>Male</td>
-                <td>
-                    <div class="dept-label">HR</div>
-                    <div class="dept-label">Finance</div>
-                </td>
-                <td>20202020</td>
-                <td>16 Sep 2020</td>
-                <td>
-                    <img id="1" onclick="remove(this)" src="../assets/delete-black-18dp.svg" alt="Delete">
-                    <img id="1" onclick="update(this)" src="../assets/create-black-18dp.svg" alt="Edit">
-                </td>
-            </tr>
+        <div class="table-main">
+            <table id="table-display" class="table">
+            </table>
+        </div>
         </table>
     </div>
-    </table>
-</div>
-</div>
-
+    </div>
 </body>
+<script src="../js/home.js"></script>
 </html>
