Added:Employee Details Are Added From JSon Object

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -36,4 +36,7 @@
     </div>
 </body>
 <script src="../js/home.js"></script>
+<script src="../js/site_properties.js"></script>
+<script src="../js/EmployeePayroll.js"></script>
+<script src="../js/utility.js"></script>
 </html>
