Added:Function To Remove Employee Details

--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -34,22 +34,22 @@
                 <div class= "profile-radio-content">
                     <label>
                         <input type="radio" id="profile1" name="profile"
-                        value="../assets/Ellipse-3"required >
+                        value="../assets/Ellipse -3.png"required >
                         <img class="profile" id='image1' src="../assets/Ellipse -3.png">
                     </label>
                     <label>
                         <input type="radio" id="profile2" name="profile"
-                        value="../assets/Ellipse-1"required >
+                        value="../assets/Ellipse -1.png"required >
                         <img class="profile" id='image1' src="../assets/Ellipse -1.png">
                     </label>
                     <label>
                         <input type="radio" id="profile3" name="profile"
-                        value="../assets/Ellipse-8"required >
+                        value="../assets/Ellipse -8.png"required >
                         <img class="profile" id='image1' src="../assets/Ellipse -8.png">
                     </label>
                     <label>
                         <input type="radio" id="profile4" name="profile"
-                        value="../assets/Ellipse-7"required >
+                        value="../assets/Ellipse -7.png"required >
                         <img class="profile" id='image1' src="../assets/Ellipse -7.png">
                     </label>
                 </div>
@@ -65,15 +65,17 @@
                 </div>
             </div>
             <div class="row-content">
-                <label class="label text" for="department">Department</label>
+                <label class="label text" for="department" >Department</label>
                 <div>
-                    <input class="checkbox" type="checkbox" id="hr" name="hr" value="HR">
+                    <input class="checkbox" type="checkbox" id="hr" name="department" value="HR">
                     <label class="text" for="hr">HR</label>
-                    <input class="checkbox" type="checkbox" id="sales" name="sales" value="Sales">
-                    <label class="text" for="finance">Sales</label>
-                    <input class="checkbox" type="checkbox" id="finance" name="finance" value="Finance">
-                    <label class="text" for="hr">Finance</label>
-                    <input class="checkbox" type="checkbox" id="others" name="others" value="Others">
+                    <input class="checkbox" type="checkbox" id="sales" name="department" value="sales">
+                    <label class="text" for="sales">Sales</label>
+                    <input class="checkbox" type="checkbox" id="finance" name="department" value="Finance">
+                    <label class="text" for="finance">Finance</label>
+                    <input class="checkbox" type="checkbox" id="engineer" name="department" value="Engineer">
+                    <label class="text" for="engineer">Engineer</label>
+                    <input class="checkbox" type="checkbox" id="others" name="department" value="Others">
                     <label class="text" for="others">Others</label>
                 </div>
             </div>
