Added:Remove Link Of Employee Payroll Class

--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap">
     <link rel ="stylesheet" href = "../css/new_payoll_form.css">
     <title>Employee Payroll Form</title>
-    <script src="../js/EmployeePayroll.js"></script>
+    
     <script src="../js/utility.js"></script>
+    <script src="../js/site_properties.js"></script>
     <script defer src="../js/payroll_form.js"></script>
 </head>
 <body>
