--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -37,6 +37,6 @@
 </body>
 <script src="../js/home.js"></script>
 <script src="../js/site_properties.js"></script>
-
+<script src="../js/http_services.js"></script>
 <script src="../js/utility.js"></script>
 </html>
